--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>DBS UPI</title>
     <link rel="stylesheet" href="style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="./style.css" />
     <script src="./custom-scripts.js" defer=""></script>
     <style>
